# truetm

./: Cargo.toml  Makefile  README.md  dvtr.1  simplex.1  truetm.1
src/: config.rs  copy_mode.rs  layout.rs  main.rs  pane.rs  render.rs  tag.rs
