[package]
name = "truetm"
version = "1.0.0"
edition = "2021"
description = "A simple truecolor terminal multiplexer"
license = "Unlicense"

[dependencies]
portable-pty = "0.8"
crossterm = "0.28"
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
regex = "1"
